--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^18",
     "react-awesome-reveal": "^4.2.14",
     "react-dom": "^18",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
