--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/cssinjs": "^1.21.1",
     "antd": "^5.19.3",
     "axios": "^1.7.9",
+    "html-react-parser": "^5.2.6",
     "next": "^14.2.18",
     "next-language-detector": "^1.1.0",
     "next-translate": "^2.6.2",
