--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next-sitemap",
     "start": "next start",
     "lint": "next lint",
-    "preview": "serve out/ -p 3000"
+    "preview": "serve out/ -p 3000",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.21.1",
@@ -16,6 +17,7 @@
     "html-react-parser": "^5.2.6",
     "next": "^14.2.18",
     "next-language-detector": "^1.1.0",
+    "next-sitemap": "^4.2.3",
     "next-translate": "^2.6.2",
     "nodemailer": "^6.9.15",
     "react": "^18",
